[gd_scene load_steps=11 format=3 uid="uid://btmchq3g4fqhw"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_en4p2"]
[ext_resource type="PackedScene" uid="uid://dk3kbab764mfm" path="res://scenes/player_basic_sword.tscn" id="2_xvhix"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jenbl"]
size = Vector2(48, 48)

[sub_resource type="Animation" id="Animation_fi7xa"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_ms8f1"]
resource_name = "middleJump"
length = 0.005
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_c83ui"]
resource_name = "new_animation"

[sub_resource type="Animation" id="Animation_fkdmp"]
resource_name = "startJump"
length = 0.05
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.5), Vector2(0.5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 12), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_mfmpr"]
resource_name = "topJump"
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.5, 1), Vector2(1, 0.5), Vector2(0.5, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -12), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x4vqw"]
_data = {
"RESET": SubResource("Animation_fi7xa"),
"middleJump": SubResource("Animation_ms8f1"),
"new_animation": SubResource("Animation_c83ui"),
"startJump": SubResource("Animation_fkdmp"),
"topJump": SubResource("Animation_mfmpr")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15m4j"]
size = Vector2(64, 64)

[node name="player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_en4p2")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_jenbl")

[node name="playerBasicSword" parent="." instance=ExtResource("2_xvhix")]
position = Vector2(1, 0)

[node name="dashTimer" type="Timer" parent="."]
wait_time = 0.25

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x4vqw")
}

[node name="Node2D" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Node2D"]
offset_left = -24.0
offset_top = -24.0
offset_right = 24.0
offset_bottom = 24.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 9
collision_mask = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_15m4j")

[connection signal="timeout" from="dashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
